infra/k8s/overlays/dev-microk8s/200-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: ticketing
spec:
  template:
    spec:
      containers:
        - name: auth
          # use skaffold version of the image instead and provide more failure/delay tolerance
          # since it takes more time to boot up
          image: localhost:32000/msnr-ta-auth-skaffold
          startupProbe:
            failureThreshold: 5
            initialDelaySeconds: 20
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 30
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 40
