infra/k8s/overlays/dev-microk8s/203-tickets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
  namespace: ticketing
spec:
  template:
    spec:
      containers:
        - name: tickets
          image: localhost:32000/msnr-ta-tickets-skaffold
          startupProbe:
            failureThreshold: 5
            initialDelaySeconds: 10
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 15
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 20
