infra/k8s/overlays/dev-microk8s/204-tickets-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongodb-deployment
  namespace: ticketing
spec:
  template:
    spec:
      containers:
        - name: tickets-mongodb
          image: mongo:latest
