infra/k8s/overlays/dev-microk8s/206-orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  namespace: ticketing
spec:
  template:
    spec:
      containers:
        - name: orders
          image: localhost:32000/msnr-ta-orders-skaffold
          startupProbe:
            failureThreshold: 5
            initialDelaySeconds: 10
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 15
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 20
