infra/k8s/overlays/dev-microk8s/208-expiration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-deployment
  namespace: ticketing
spec:
  template:
    spec:
      containers:
        - name: expiration
          image: localhost:32000/msnr-ta-expiration-skaffold
          readinessProbe:
            exec:
              command:
                - ts-node
                - /node/src/healthcheck.ts
            failureThreshold: 5
            initialDelaySeconds: 45
          livenessProbe:
            exec:
              command:
                - ts-node
                - /node/src/healthcheck.ts
            failureThreshold: 5
            initialDelaySeconds: 45
