infra/k8s/overlays/dev-microk8s/211-payments-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongodb-deployment
  namespace: ticketing
spec:
  template:
    spec:
      containers:
        - name: payments-mongodb
          image: mongo:latest
