infra/k8s/overlays/dev-microk8s/900-ticketing-ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-ingress
  namespace: ticketing # application namespace
spec:
  ingressClassName: public
